--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,105 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+
+
+	header.header.space-sm
+		.container
+			.row.d-flex.align-items-center
+				.col-lg-5
+					.content-block.font-white
+						.block-title
+							h2.h1.font-weight-bold.font-white.text-white
+								| Self-Storage
+								br
+								|  made easy.
+						//- /.block-title
+						p.font-white.text-white
+							| Duis aute irure dolor in reprehenderit in voluptate
+							br
+							|  velit esse cillum dolore eu fugiat nulla pariatur.
+						#v-pills-tab.nav.flex-column(role='tablist' aria-orientation='vertical')
+							a#v-pills-home-tab.nav-link.active.text-white(data-toggle='pill' href='#v-pills-home' role='tab' aria-controls='v-pills-home' aria-selected='true')
+								i.fa.fa-check
+								|  Refresing to get such a personal touch.
+							a#v-pills-profile-tab.nav-link.text-white(data-toggle='pill' href='#v-pills-profile' role='tab' aria-controls='v-pills-profile' aria-selected='false')
+								i.fa.fa-check
+								|  Duis aute irure dolor in reprehenderit in voluptate.
+							a#v-pills-messages-tab.nav-link.text-white(data-toggle='pill' href='#v-pills-messages' role='tab' aria-controls='v-pills-messages' aria-selected='false')
+								i.fa.fa-check
+								|  Velit esse cillum dolore eu pariatur.
+				.col-lg-7
+					#v-pills-tabContent.tab-content
+						#v-pills-home.tab-pane.fade.show.active(role='tabpanel' aria-labelledby='v-pills-home-tab')
+							.image-block
+								img.img-fluid(src='img/pablo-delivery.png' alt='Awesome Image')
+
+	section.space-sm
+		.container
+			.row
+				.col-12.alert.alert-warning
+					| Below is content generated from the Space Manager database link.
+			.row
+				.col-12.alert
+					each _site,index in sites
+						div(id=index class="sites") #{_site.site}
+							
+			.row
+				.col-12.alert.alert-warning
+					| End dynamic content.
+
+	section.space-sm
+		.container
+			.row
+				div#map(style="width: 100%; height: 580px")
+
+	section.space-md
+		.space-md.w-90.bg-red
+			.container
+				.row.align-items-md-center
+					.col-md-6
+						.video-cover.rounded.shadow-md
+							img.img-fluid(alt='Image' src='img/pablo-downloading.png')
+
+						//- end: Video
+					.col-md-6
+						blockquote.testimonial-block.waypoint-reveal
+							.testimonial-quote.zoom-in
+								svg(viewBox='0 0 109.253418 82.4897461' enable-background='new 0 0 500 500' xml:space='preserve')
+									path(style='fill:#fff;' d='M27.496582,82.4897461C10.6318359,82.4897461,0,67.4584961,0,46.9277344 C0,12.831543,18.3310547,0.3662109,47.2939453,0v12.831543c-13.5649414,0-22.7304688,5.4995117-25.296875,15.0317383 c-2.9331055,6.5991211-2.5664062,11.3652344-2.199707,15.03125c1.8330078-1.8330078,5.8662109-2.9326172,8.7988281-2.9326172 c12.8320312,0,21.2641602,9.1655273,21.2641602,20.8974609S40.6948242,82.4897461,27.496582,82.4897461z M87.2558594,82.4897461 c-16.8642578,0-27.8632812-15.03125-27.8632812-35.5620117C59.3925781,12.831543,78.090332,0.3662109,106.6870117,0v12.831543 c-13.1982422,0-22.3637695,5.4995117-25.296875,15.0317383c-2.5664062,6.5991211-2.5664062,11.3652344-1.8330078,15.03125 c1.8330078-1.8330078,5.4990234-2.9326172,8.7988281-2.9326172c12.465332,0,20.8974609,9.1655273,20.8974609,20.8974609 S100.4545898,82.4897461,87.2558594,82.4897461z')
+							.testimonial-block-copy.step-up
+								p.h3.font-white
+									| Their skill and expertise is great. Making a stressful day a breeze. A true partnership that's taken our business to the next level.
+							footer.step-up
+								cite Almir Pamukovic – Senior Designer, codenpixel
+						//- end: Quote
+
+
+block footer
+	script(src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js")
+	script.
+		// Creating map options
+		var mapOptions = {
+			center: [53.79082351205316, -1.5851590987572806],
+			zoom: 17,
+			scrollWheelZoom: false
+		}
+		// Creating a map object
+		var map = new L.map('map', mapOptions);
+		// Creating a Layer object
+		var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+		L.marker([53.79082351205316, -1.5851590987572806]).addTo(map)
+		.bindPopup("<b>We are located here!</b><br /><a target='_BLANK' href='https://www.google.com/maps/dir/?api=1&destination=53.79082351205316,-1.5851590987572806'>Get Directions!</a>").openPopup();
+		// Adding layer to the map
+		map.addLayer(layer);
+		map.on('click', function() {
+			if (!map.scrollWheelZoom.enabled()) {
+				map.scrollWheelZoom.enable();
+			}
+			else {
+				//- map.scrollWheelZoom.enable();
+			}
+		});
+
+	//- h1= title
+	//- p Welcome to #{title}
