Dynamic home page complete

--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -18,9 +18,10 @@ footer.footer.pb-5
 								br
 
 					.col-md-4
-						h4 Portfolio site
+						h4 This template:
 						ul.list-unstyled.p-0
-
+							li(class='#')
+								a(href='https://sharebootstrap.com/trendy-looking-free-bootstrap-template/' target='_BLANK') https://sharebootstrap.com/
 								br
 					.col-md-4
 						h4 Quick links
