Added a new sites route and tweaked the URL and menu structure

--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -36,9 +36,9 @@ footer.footer.pb-5
 								a(href='#') who we are
 // /main content
 // Bootstrap core JavaScript
-script(src='vendor/jquery/jquery.min.js')
-script(src='vendor/bootstrap/js/bootstrap.bundle.min.js')
+script(src='/vendor/jquery/jquery.min.js')
+script(src='/vendor/bootstrap/js/bootstrap.bundle.min.js')
 // Plugin JavaScript
-script(src='vendor/jquery-easing/jquery.easing.min.js')
+script(src='/vendor/jquery-easing/jquery.easing.min.js')
 // Custom JavaScript for template
-script(src='js/custom.js')
+script(src='/js/custom.js')
