--- a/views/_nav_menu.pug
+++ b/views/_nav_menu.pug
@@ -1,13 +1,13 @@
 //- // Navigation
 nav#mainNav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top.py-3
 	.container
-		a.navbar-brand.js-scroll-trigger(href='index.html') SpaceManager Middleware Demo
+		a.navbar-brand.js-scroll-trigger(href='/') SpaceManager Middleware Demo
 		button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarResponsive' aria-controls='navbarResponsive' aria-expanded='false' aria-label='Toggle navigation')
 			span.navbar-toggler-icon
 		#navbarResponsive.collapse.navbar-collapse
 			ul.navbar-nav.ml-auto
 				li.nav-item
-					a.nav-link.js-scroll-trigger(href='index.html') Home
+					a.nav-link.js-scroll-trigger(href='/') Home
 				li.nav-item
 					a.nav-link.js-scroll-trigger(href='faq.html') Faq
 				li.nav-item
