--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,13 +12,13 @@ html(lang='en')
 
 
 		//- Bootstrap core CSS
-		link(href='vendor/bootstrap/css/bootstrap.min.css' rel='stylesheet')
+		link(href='/vendor/bootstrap/css/bootstrap.min.css' rel='stylesheet')
 		//- Fontaweome icons replacment
 		link(rel='stylesheet' href='https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome-font-awesome.min.css')
 		//- Theme styles for this template
-		link(href='css/style.css' rel='stylesheet')
+		link(href='/css/style.css' rel='stylesheet')
 		//- Your Custom styles for this template
-		link(href='css/custom.css' rel='stylesheet')
+		link(href='/css/custom.css' rel='stylesheet')
 		link(href='http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css' rel='stylesheet')
 
 	body
