Added the .env file and have tweaked the URL structure of sites/units

--- a/views/index.pug
+++ b/views/index.pug
@@ -44,7 +44,7 @@ block content
 				.row.d-flex.justify-content-center
 					.col-12
 						.block-title
-							a(href=`/site/${_site.details.siteid}`)
+							a.link(href=`/site/${_site.details.siteid}`)
 								h2.h1.font-weight-bold= _site.name
 						p.h5= `${_site.details.Address1} - ${_site.details.PostCode} -  ${_site.details.siteid}`
 
