--- a/views/sites/unit.pug
+++ b/views/sites/unit.pug
@@ -25,7 +25,7 @@ block content
 						span.contact-info__icon
 						i.ti-home
 						.media-body
-							a(href=`/site/${site.details.siteid}`)
+							a.link(href=`/site/${site.details.siteid}`)
 								h3= site.name
 							p= `${site.details.Address1} - ${site.details.PostCode}`
 							p.my-2.small.badge.badge-info="Site "+site.details.siteid
