--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,3 +9,22 @@ Your custom css here
     display:block;
     margin:4px auto !important;
 }
+
+.cover_pic_view{
+    display: block;
+    height: 300px;
+    margin:0 auto;
+    /*border-radius: 50%;*/
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+
+.navbar-toggler-icon{
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+.navbar{
+    border-bottom: 1px solid #ccc;
+}
