--- a/views/_nav_menu.pug
+++ b/views/_nav_menu.pug
@@ -1,17 +1,30 @@
 //- // Navigation
-nav#mainNav.navbar.navbar-expand-lg.navbar-light.bg-white.fixed-top.py-3
-	.container
-		a.navbar-brand.js-scroll-trigger(href='/') SpaceManager Middleware Demo
-		button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarResponsive' aria-controls='navbarResponsive' aria-expanded='false' aria-label='Toggle navigation')
+
+
+header
+	nav.navbar.navbar-expand-md.fixed-top.bg-white
+		a.navbar-brand(href='/') MiddleManagerDemo
+		button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarCollapse' aria-controls='navbarCollapse' aria-expanded='false' aria-label='Toggle navigation')
 			span.navbar-toggler-icon
-		#navbarResponsive.collapse.navbar-collapse
-			ul.navbar-nav.ml-auto
+		#navbarCollapse.collapse.navbar-collapse
+			ul.navbar-nav.mr-auto
+				li.nav-item.active
+					a.nav-link(href='/site/RI1GRWXX250320060000') Self Storage 
 				li.nav-item
-					a.nav-link.js-scroll-trigger(href='/') Home
-				li.nav-item
-					a.nav-link.js-scroll-trigger(href='faq.html') Faq
-				li.nav-item
-					a.nav-link.js-scroll-trigger(href='service.html') Service
-				li.nav-item
-					a.nav-link.js-scroll-trigger(href='contact.html') Login
-//- // end: Navigation
+					a.nav-link(href='/site/RI0Z8DNB051020200001') Container Hire
+				//- li.nav-item
+				//- 	a.nav-link.disabled(href='#') Disabled
+			.mt-2.mt-md-0
+				ul.navbar-nav.mr-0
+					li.nav-item.active
+						a.nav-link(href='/cart') Cart 
+					if(loggedin)
+						li.nav-item
+							a.nav-link(href='/account') Account
+						li.nav-item
+							a.nav-link(href='/account/logout') Logout
+					else 
+						li.nav-item
+							a.nav-link(href='/account/register') Join
+						li.nav-item
+							a.nav-link(href='/account/login') Login
