added route to handle quotes and orders

--- a/views/_nav_menu.pug
+++ b/views/_nav_menu.pug
@@ -17,7 +17,7 @@ header
 			.mt-2.mt-md-0
 				ul.navbar-nav.mr-0
 					li.nav-item.active
-						a.nav-link(href='/cart') Cart 
+						a.nav-link(href='/shop/cart') Cart 
 					if(loggedin)
 						li.nav-item
 							a.nav-link(href='/account') Account
