--- a/views/_nav_menu.pug
+++ b/views/_nav_menu.pug
@@ -17,7 +17,12 @@ header
 			.mt-2.mt-md-0
 				ul.navbar-nav.mr-0
 					li.nav-item.active
-						a.nav-link(href='/shop/cart') Cart 
+						a.nav-link(href='/shop/cart')
+							if sumQuotes > 0
+								strong
+									=`Cart (${sumQuotes})`
+							else
+								| Cart
 					if(loggedin)
 						li.nav-item
 							a.nav-link(href='/account') Account
