--- a/views/user_account/forgot_password.pug
+++ b/views/user_account/forgot_password.pug
@@ -10,14 +10,14 @@ block content
 						
 					div(class='panel-body')
 						div(class='large_form')
-							p Enter the email address you used to set up the anthill account and we will send you instructions for resetting your password.
+							p Enter the email address you used to set up the account and we will send you instructions for resetting your password.
 							form(action='/account/forgot_password' method='post')
 								div(class='form-group')
 									label(for='email') email:
-									input(name='email' id='email' class="form-control" placeholder='anthill account email address' type='text' required)
+									input(name='email' id='email' class="form-control" placeholder='account email address' type='text' required)
 								div(class='form-group')
 									button(type='submit' class='btn btn-primary') Submit
 	
 							
 					div(class='panel-footer')
-						p You should get an email shortly, and you can be dealing with stuff in no time. If you cannot find the mail check your spam folder or search for <b>hello@theanthill.io</b>.
+						p You should get an email shortly, and you can be dealing with stuff in no time. If you cannot find the mail check your spam folder or search for <b>hello@tickertape.cc</b>.
