Added new order

--- a/views/shop/new_order_quote.pug
+++ b/views/shop/new_order_quote.pug
@@ -77,12 +77,12 @@ block content
 							label(for='addressZip') postcode/zip:
 							input(class='form-control' name='addressZip' id='addressZip' value=data.addressZip placeholder='postcode/zip' type='text' required)
 					.col-12
-						h3 Reservation Fee
+						h3 Make the deposit
 
 					div.col-md-6
 						div(class='form-group')
 							label(for='deposit') deposit:
-							input(class='form-control' name='deposit' id='deposit' placeholder='fee (5GBP)' type='text' required)
+							input(class='form-control' name='deposit' id='deposit' placeholder='deposit (one month?)' type='text' required)
 						div(class='form-group')
 							label(for='ivatamt') ivatamt:
 							input(class='form-control' name='ivatamt' id='ivatamt' placeholder='VAT amount' type='text' required)
