--- a/views/shop/new_order_quote.pug
+++ b/views/shop/new_order_quote.pug
@@ -117,9 +117,9 @@ block content
 							input(class='form-control' name='note' id='note' value="online order" placeholder='note' type='text')
 					div.col-md-6
 						.row.alert.alert-warning
-							p These fields must be completed and should be similar to the Space Manager UI. There are two reservation functions. One for existing users, and one that will create a new user. 
+							p These fields must be completed and should be similar to the Space Manager UI. 
 							p This section of the demo will also create a new user in the local database if no user is currently logged in.
-							p In a production system - the electronic collection of tthe deposit would happen around now. But in this demo, we can just submit a value and Space Manager will accept it.
+							p In a production system - the electronic collection of the deposit would happen around now. But in this demo, we can just submit a value and Space Manager will accept it.
 
 					div.col-md-12
 						div(class='form-group')
