updated the cdn links for leaflet to https and newer js version for use with HTTPS online

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html(lang='en')
 		link(href='/css/style.css' rel='stylesheet')
 		//- Your Custom styles for this template
 		link(href='/css/custom.css' rel='stylesheet')
-		link(href='http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css' rel='stylesheet')
+		link(href='https://unpkg.com/leaflet@1.7.1/dist/leaflet.css' rel='stylesheet')
 
 	body
 		#preloader
