--- a/views/shop/quotes.pug
+++ b/views/shop/quotes.pug
@@ -62,7 +62,7 @@ block content
 
 
 block footer
-	script(src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js")
+	script(src = "https://unpkg.com/leaflet@1.7.1/dist/leaflet.js")
 	script.
 		// Creating map options
 		var mapOptions = {
