--- a/views/sites/unit.pug
+++ b/views/sites/unit.pug
@@ -37,6 +37,7 @@ block content
                             p.my-2.small.badge.badge-info="Unit "+unit.UnitID
                             p.my-2.small.badge.badge-info="Num "+unit.UnitNumber
                             p.my-2.small.badge.badge-info="Size "+unit.SizeCodeID
+                            p.my-2.small.badge.badge-info="Size "+unit.Sizecode
                     .media.contact-info
                         span.contact-info__icon
                         i.ti-tablet
